hemidall-info/deployment.yaml
---
metadata:
  name: hemidall-info
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hemidall-info
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hemidall-info
  template:
    metadata:
      name: hemidall-info
      labels:
        app: hemidall-info
    spec:
      containers:
        - name: hemidall-info
          image: inquisitor1337/hemidall-stackit1
          ports:
            - containerPort: 8080
              name: http
      serviceAccountName: hemidall-info
