hemidall-info/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hemidall-info
  namespace: hemidall-info
spec:
  selector:
    app: hemidall-info
  type: ClusterIP 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
      #  loadBalancerIP: 192.168.0.177
