hemidall-info/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemidall-info-ingress
  namespace: hemidall-info
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: "hemidall.dev" # Change to your actual domain
    http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: hemidall-info
            port:
              number: 80
